# Claude_IP

./: .gitignore  LICENSE  README.md  tb_timer_ahb  tb_timer_apb  tb_timer_axi4l  tb_timer_wb
.agents/: Claude_IP.md  MEMORY.md  VHDL2008CodingStyle.md  cleanup.md  directed_tests.md  feedback_vcs_waveform_dumping.md  firmware.md  formal.md  lint.md  power.md  project_timer_postsyn_sim.md  project_timer_sim_runner.md  rdl.md  reference_vcs_tools.md  regression.md  rtl.md  setup.md  synthesis.md  uvm.md
IP/common/design/rtl/verilog/: claude_ahb_if.sv
IP/common/design/rtl/vhdl/: claude_ahb_if.vhd  claude_apb_if.vhd  claude_axi4l_if.vhd  claude_wb_if.vhd
IP/common/firmware/cmake/: arm-cortex-m33.cmake  riscv32.cmake
IP/common/firmware/include/: platform.h
IP/common/verification/tasks/: tasks_ahb.sv  tasks_apb.sv  tasks_axi4l.sv  tasks_wb.sv
IP/common/verification/tests/: ip_test_pkg.sv  ip_test_pkg.vhd
IP/common/verification/tools/: ip_tool_base.py  run_regression.py
IP/interface/bus_matrix/: README.md  cleanup.sh  setup.sh
IP/interface/bus_matrix/design/behavioral/: bus_matrix_model.sv
IP/interface/bus_matrix/doc/: spec.md
IP/interface/bus_matrix/synthesis/: clean.sh  known_issues.md  run_vendor_synth.py
IP/interface/bus_matrix/synthesis/designcompiler/: synth.tcl
IP/interface/bus_matrix/synthesis/quartus/: report.txt  synth_bus_matrix_ahb.tcl  synth_bus_matrix_axi.tcl  synth_bus_matrix_wb.tcl
IP/interface/bus_matrix/synthesis/vivado/: report.txt  synth_bus_matrix_ahb.tcl  synth_bus_matrix_axi.tcl  synth_bus_matrix_wb.tcl
IP/interface/bus_matrix/synthesis/yosys/: run_synth.py  synth_bus_matrix_ahb.tcl  synth_bus_matrix_ahb.ys  synth_bus_matrix_ahb_vhdl.ys  synth_bus_matrix_axi.tcl  synth_bus_matrix_axi.ys  synth_bus_matrix_axi_vhdl.ys  synth_bus_matrix_wb.tcl  synth_bus_matrix_wb.ys  synth_bus_matrix_wb_vhdl.ys
IP/interface/bus_matrix/verification/formal/: bus_matrix_arb.sby  bus_matrix_crossbar.sby  bus_matrix_decode.sby  bus_matrix_props.sv  transcript  xvlog.pb
IP/interface/bus_matrix/verification/lint/: verilator.flags  vhdl_lint.toml  waivers.md
IP/interface/bus_matrix/verification/modelsim/: sim_bus_matrix_ahb.do  sim_bus_matrix_ahb_wave.do  sim_bus_matrix_axi.do  sim_bus_matrix_axi_wave.do  sim_bus_matrix_wb.do  sim_bus_matrix_wb_wave.do
IP/interface/bus_matrix/verification/regression/: README.md  report.md  run_regression.sh
IP/interface/bus_matrix/verification/testbench/: bus_matrix_ahb_master.sv  bus_matrix_ahb_slave.sv  bus_matrix_axi_master.sv  bus_matrix_axi_slave.sv  bus_matrix_wb_master.sv  bus_matrix_wb_slave.sv  tb_bus_matrix_ahb.sv  tb_bus_matrix_ahb.vhd  tb_bus_matrix_axi.sv  tb_bus_matrix_axi.vhd  tb_bus_matrix_wb.sv  tb_bus_matrix_wb.vhd
IP/interface/bus_matrix/verification/tests/: test_bus_matrix_ops.sv
IP/interface/bus_matrix/verification/tools/: formal_bus_matrix.py  lint_bus_matrix.py  run_regression.py  sim_bus_matrix.py  (+1 more)
IP/system/timer/: .gitignore  README.md  cleanup.sh  setup.sh  tb_timer_ahb  tb_timer_apb  tb_timer_axi4l  tb_timer_wb
IP/system/timer/doc/: spec.md  timer_regs.html
IP/system/timer/firmware/: CMakeLists.txt  build.sh
IP/system/timer/firmware/cmake/: arm-cortex-m33.cmake  riscv32.cmake
IP/system/timer/firmware/examples/: timer_example.c
IP/system/timer/firmware/include/: timer.h  timer_regs.h
IP/system/timer/firmware/src/: timer.c
IP/system/timer/synthesis/: clean.sh  known_issues.md  run_vendor_synth.py
common/design/rtl/verilog/: claude_apb_if.sv  claude_axi4l_if.sv  claude_wb_if.sv
common/design/rtl/vhdl/: claude_ahb_if.vhd  claude_apb_if.vhd  claude_axi4l_if.vhd  claude_wb_if.vhd
virtualenv/: create_venv.sh  requirements.txt
(+146 files in other folders)
